# copydetect-slim

./: build.py  pyproject.toml  techstack.md  techstack.yml
copydetect/: detector.py  utils.py
