[tool.poetry]
name = "copydetect"
version = "0.4.5"
description = "Code plagiarism detection tool"
authors = ["Bryson Lingenfelter <blingenfelter@nevada.unr.edu>"]
license = "MIT"
build = "build.py"
readme = "README.md"
include = ["copydetect/data/*"]
classifiers = [
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Education",
]

[tool.poetry.scripts]
copydetect = "copydetect.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"
pygments = "^2.17.2"
tqdm = "^4.66.1"
matplotlib = { version = "^3.8.2", optional = true }
jinja2 = { version = "^3.1.2", optional = true }

[tool.poetry.extras]
html = ["matplotlib", "jinja2"]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
matplotlib = "^3.8.2"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
